--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <h2 id="nav-title">Ma<span id="nav-name">S</span>uk</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><a href=""><button class="primary-btn">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h3 id="greetings">Hi, I am</h3>
+                <h1 id="big-name">ILIUS MAHFUZ</h1>
+                <p class="banner-description">A fresh graduate with good academic standing and professional experience.
+                    Currently I'm involving
+                    with Full-stack web development, cybersecurity, Network support and many other software technology.
+                    As a beginner I'm very confident and i can give my level best.</p>
+                <a class="primary-btn" href="">Download CV</a>
+            </div>
+            <div>
+                <img src="images/photo 1.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
