--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 id="nav-title">Ma<span id="nav-name">S</span>uk</h2>
             <ul>
@@ -38,6 +38,64 @@
             </div>
         </div>
     </header>
+    <main>
+        <!-- about me section  -->
+        <section class="about-me">
+            <h2 class="section-title">About Me</h2>
+            <p class="sec-description">I, m a developer with a passion for web development. I enjoy developing simple,
+                clean and slick websites
+                that provide real value to the end user. Thousands of clients have procured exceptional resulfs while
+                working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+            <div class="about-info">
+                <div class="info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-detail">Ilius Mahfuz</p>
+                </div>
+                <div class="info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-detail">mahfuz.deen@mysite.com</p>
+                </div>
+                <div class="info">
+                    <p class="info-title">Date of Birth:</p>
+                    <p class="info-detail">5<sup>th</sup> Nov 1998</p>
+                </div>
+                <div class="info">
+                    <p class="info-title">Location:</p>
+                    <p class="info-detail">Chengdu,Sichuan</p>
+                </div>
+            </div>
+        </section>
+        <!-- Skills section  -->
+        <section class="skills">
+            <h3 class="section-title">My Skills</h3>
+            <p>I have vast experience building software for clients all over the
+                world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find
+                out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-details">
+                <div class="skill">
+                    <img src="" alt="">
+                    <h4 class="skill-title"></h4>
+                    <p class="skill-des"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h4 class="skill-title"></h4>
+                    <p class="skill-des"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h4 class="skill-title"></h4>
+                    <p class="skill-des"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h4 class="skill-title"></h4>
+                    <p class="skill-des"></p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
