--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     </header>
     <main>
         <!-- about me section  -->
-        <section class="about-me">
+        <section class="about-me section-width">
             <h2 class="section-title">About Me</h2>
             <p class="sec-description">I, m a developer with a passion for web development. I enjoy developing simple,
                 clean and slick websites
                 that provide real value to the end user. Thousands of clients have procured exceptional resulfs while
                 working with me. Delivering work within time and budget which meets clients requirements in our mata.
             </p>
-            <div class="about-info">
+            <div class="section-flex">
                 <div class="info">
                     <p class="info-title">Name:</p>
                     <p class="info-detail">Ilius Mahfuz</p>
@@ -67,12 +67,12 @@
             </div>
         </section>
         <!-- Skills section  -->
-        <section class="skills">
-            <h3 class="section-title">My Skills</h3>
+        <section class="section-width">
+            <h2 class="section-title">My Skills</h2>
             <p>I have vast experience building software for clients all over the
                 world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find
                 out more about my experience? Check out my online resume and project portfolio.</p>
-            <div class="about-info">
+            <div class="section-flex">
                 <a target="_blank" href="https://www.w3schools.com/js/">
                     <div class="skill">
                         <img src="images/icons/js.png" alt="">
@@ -99,6 +99,38 @@
                     <h4 class="skill-title">MongoDB</h4>
                     <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
                         FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section  -->
+        <section class="resume section-width">
+            <h2 class="section-title">A summary of My Resume</h2>
+            <div class="resume-details">
+                <div class="resume-section">
+                    <h3 class="resume-head">My Education</h3>
+                    <div class="each-section">
+                        <h4 class="second-title">Bachelor in Software Engineering</h4>
+                        <p class="institute">Sichuan University / 2017-2021</p>
+                        <p class="resume-description"></p>
+                    </div>
+                    <div class="each-section">
+                        <h4 class="second-title"></h4>
+                        <p class="institute"></p>
+                        <p class="resume-description"></p>
+                    </div>
+                </div>
+                <div class="resume-section">
+                    <h3 class="resume-head">My Experience</h3>
+                    <div class="each-section">
+                        <h4 class="second-title"></h4>
+                        <p class="institute"></p>
+                        <p class="resume-description"></p>
+                    </div>
+                    <div class="each-section">
+                        <h4 class="second-title"></h4>
+                        <p class="institute"></p>
+                        <p class="resume-description"></p>
+                    </div>
                 </div>
             </div>
         </section>
