resume section done

--- a/index.html
+++ b/index.html
@@ -111,25 +111,33 @@
                     <div class="each-section">
                         <h4 class="second-title">Bachelor in Software Engineering</h4>
                         <p class="institute">Sichuan University / 2017-2021</p>
-                        <p class="resume-description"></p>
+                        <p class="resume-description">I did my Bachelor of Science in Electrical and Electronic
+                            Engineering from Sichuan University. From the very beginning I took every opportunity to get
+                            specialized in various areas of computer science and engineering.</p>
                     </div>
+                    <hr>
                     <div class="each-section">
-                        <h4 class="second-title"></h4>
-                        <p class="institute"></p>
-                        <p class="resume-description"></p>
+                        <h4 class="second-title">Higher Secondary School Certificate</h4>
+                        <p class="institute">Rajshahi Govt. City College / 2014-2016</p>
+                        <p class="resume-description">From the very beginning I took every opportunity to get
+                            specialized in various areas of computer science and engineering.</p>
                     </div>
                 </div>
                 <div class="resume-section">
                     <h3 class="resume-head">My Experience</h3>
                     <div class="each-section">
-                        <h4 class="second-title"></h4>
-                        <p class="institute"></p>
-                        <p class="resume-description"></p>
+                        <h4 class="second-title">Jr. Font End Developer</h4>
+                        <p class="institute">Dribbble Inc / 2018 - 2022</p>
+                        <p class="resume-description">Dynamic and creative software developer with over 5 years of
+                            experience in producing robust code for high-volume companies.</p>
                     </div>
+                    <hr>
                     <div class="each-section">
-                        <h4 class="second-title"></h4>
-                        <p class="institute"></p>
-                        <p class="resume-description"></p>
+                        <h4 class="second-title">HTML Developer</h4>
+                        <p class="institute">Adobe Inc / 2017 - 2018</p>
+                        <p class="resume-description">Ingenious and determined in engineering with
+                            experience. Seeks to use first-class production design and process skills to push forward
+                            manufacturing excellence.</p>
                     </div>
                 </div>
             </div>
