footer section added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <!-- font awesome kit  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- style sheet  -->
     <link rel="stylesheet" href="style/style.css">
+    <!-- google fonts  -->
     <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +37,7 @@
                     Currently I'm involving
                     with Full-stack web development, cybersecurity, Network support and many other software technology.
                     As a beginner I'm very confident and i can give my level best.</p>
-                <a class="primary-btn" href="">Download CV</a>
+                <a class="primary-btn" href=""><i class="fa-solid fa-download"></i> Download CV</a>
             </div>
             <div>
                 <img src="images/photo 1.png" alt="">
@@ -141,8 +147,37 @@
                     </div>
                 </div>
             </div>
+            <p class="resume-btn"><a class="primary-btn" href=""><i class="fa-solid fa-download"></i> Download CV</a>
+            </p>
+        </section>
+        <!-- contact us section  -->
+        <section class="contact">
+            <div class="connect">
+                <h3 class="contact-head">Lets Connect</h3>
+                <p class="contact-details">Please fill out the form on this section to contact with me or call between
+                    9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <div>
+                    <a class="social-icon" href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a class="social-icon" href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a class="social-icon" href=""><img src="images/icons/insta.png" alt=""></a>
+                </div>
+            </div>
+            <div class="connect message">
+                <h3 class="contact-head">Let’s Message me</h3>
+                <form>
+                    <input placeholder="Your Name" type="text" name="" id="Name"> <br>
+                    <input placeholder="Your Email" type="text" name="" id="Email"><br>
+                    <textarea name="" id="" cols="40" rows="7" placeholder="Message"></textarea>
+                    <br>
+                    <button class="primary-btn">Submit</button>
+                </form>
+            </div>
         </section>
     </main>
+    <footer>
+        © All Right Reserved to Ilius Mahfuz 2023
+    </footer>
 </body>
 
 </html>
