--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- Skills section  -->
         <section class="section-width">
             <h2 class="section-title">My Skills</h2>
-            <p>I have vast experience building software for clients all over the
+            <p class="skill-area">I have vast experience building software for clients all over the
                 world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find
                 out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="section-flex">
